# tb

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
tb-gen/: Cargo.toml
tb-gen/src/: main.rs
tb-rs/: Cargo.toml  README.md
tb-rs/examples/: uring_transport.rs
tb-rs/src/: client.rs  error.rs  lib.rs
tb-rs/src/internal/: buffer.rs  connection.rs  driver.rs  mod.rs
tb-rs/src/protocol/: checksum.rs  header.rs  message.rs  mod.rs  multi_batch.rs  operation.rs  types.rs
tb-rs/tests/: integration_test.rs
tb-web/: .gitignore  Cargo.toml  build.rs
tb-web/frontend/: accounts.html  index.html  package.json  style.css  transfers.html  tsconfig.json
tb-web/frontend/src/: charts.ts  formatters.ts  main.ts
tb-web/src/: config.rs  error.rs  html.rs  main.rs  state.rs  transport.rs
tb-web/src/api/: mod.rs  types.rs
tb-web/src/routes/: accounts.rs  frontend.rs  mod.rs  transfers.rs
