[package]
name = "tb-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for TigerBeetle"

[[bin]]
name = "tb-web"
path = "src/main.rs"

[dependencies]
# TigerBeetle client
tb-rs = { path = "../tb-rs" }
tokio-uring = "0.5"

# Web framework
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
